# wavecraft

./: CMakeLists.txt  README.md
include/: graphics.h
src/: graphics.c  main.cpp
